--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,6 +1,8 @@
+# @link: https://docs.docker.com/engine/reference/builder/
+
 FROM ubuntu:18.04
 
-LABEL maintainer="Chris Fidao"
+LABEL maintainer="pnlinh1207@gmail.com"
 
 ENV DEBIAN_FRONTEND=noninteractive
 
@@ -28,7 +30,7 @@ RUN apt-get update \
 RUN ln -sf /dev/stdout /var/log/nginx/access.log \
     && ln -sf /dev/stderr /var/log/nginx/error.log
 
-ADD default /etc/nginx/sites-available/default
+ADD nginx.conf /etc/nginx/sites-available/default
 ADD supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 ADD php-fpm.conf /etc/php/7.2/fpm/php-fpm.conf
 ADD start-container.sh /usr/bin/start-container
